[tool.poetry]
name = "bahrom-bot"
version = "1.0.0"
description = "Telegram AI Bot Bahrom"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.10"
telethon = "^1.34"
python-dotenv = "^1.0"
google-generativeai = "^0.3"
flask = "^2.3"
requests = "^2.31"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"